# terraform

./: .gitignore  Azure_Agentic_AI_Plan.docx  CLAUDE.md  LLM_Robustness.ipynb  Makefile  README.md
agents/: pyproject.toml  requirements.txt
agents/function_apps/capacity_func/: function_app.py
agents/function_apps/deployment_func/: function_app.py
agents/function_apps/finops_func/: function_app.py
agents/function_apps/iac_generator_func/: function_app.py
agents/function_apps/incident_func/: function_app.py
agents/function_apps/security_func/: function_app.py
agents/src/agentic_ai/: __init__.py
agents/src/agentic_ai/capacity_planner/: __init__.py  agent.py  forecaster.py
agents/src/agentic_ai/deployment/: __init__.py  agent.py  strategies.py
agents/src/agentic_ai/finops/: __init__.py  agent.py
agents/src/agentic_ai/iac_generator/: __init__.py  agent.py  validator.py
agents/src/agentic_ai/incident_responder/: __init__.py  agent.py  runbooks.py
agents/src/agentic_ai/plugins/: __init__.py  azure_resource.py  cost_query.py  monitor_query.py  policy_check.py  terraform_exec.py
agents/src/agentic_ai/shared/: auth.py  (+7 more)
agents/tests/: conftest.py
agents/tests/test_capacity_planner/: test_agent.py
agents/tests/test_deployment/: test_agent.py
agents/tests/test_finops/: test_agent.py
agents/tests/test_iac_generator/: test_agent.py  test_validator.py
agents/tests/test_incident_responder/: test_agent.py
agents/tests/test_security/: test_agent.py
agents/tests/test_shared/: test_config.py  test_governance.py  test_models.py  test_openai_client.py
(+104 files in other folders)
