[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-ai"
version = "0.1.0"
description = "Azure Agentic AI Automation - Agent Framework"
requires-python = ">=3.11"
dependencies = [
    "semantic-kernel>=1.15.0",
    "azure-functions>=1.21.0",
    "azure-identity>=1.17.0",
    "azure-keyvault-secrets>=4.8.0",
    "azure-monitor-query>=1.4.0",
    "azure-mgmt-costmanagement>=4.0.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-mgmt-compute>=31.0.0",
    "azure-mgmt-monitor>=6.0.0",
    "openai>=1.40.0",
    "opentelemetry-sdk>=1.25.0",
    "azure-monitor-opentelemetry-exporter>=1.0.0b27",
    "pydantic>=2.8.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require Azure connectivity",
]

[tool.mypy]
python_version = "3.11"
strict = true
